<resources>
    <string name="app_name">Fliwith</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduce">무장애 여행 서비스, Fliwith</string>
    <string name="continue_kakaotalk">카카오톡으로 계속하기</string>
    <string name="continue_email">이메일로 계속하기</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="constraint_pw">영문, 숫자를 포함한 8자 이상의 비밀번호를 입력해주세요.</string>
    <string name="next">다음</string>
    <string name="sendMail1">인증을 위한\n이메일을 보내드렸어요</string>
    <string name="sendMail2">이메일에서 인증 버튼을 누르면 가입돼요!</string>
    <string name="nickname">닉네임</string>
    <string name="existNickname">이미 존재하는 닉네임입니다.</string>
    <string name="ask">불편하신 곳이 있으신가요?</string>
    <string name="ask_description">시각장애, 청각장애, 지체장애를 포함한 신체적 장애를 의미합니다.</string>
    <string name="privacy_agree">이용약관 동의</string>
    <string name="show_terms"><u>약관보기</u></string>
    <string name="disability">장애</string>
    <string name="nonDisabled">비장애</string>
    <string name="none">선택 안 함</string>
    <string name="visual">시각장애</string>
    <string name="hearing">청각장애</string>
    <string name="physical">지체장애</string>
    <string name="already_signup">이미 가입하셨나요?</string>
    <string name="login_underline"><u>로그인</u></string>
    <string name="login">로그인</string>
    <string name="search">현 지도에서 관광지 검색</string>
    <string name="spot">관광지</string>
    <string name="overview">개요</string>
    <string name="mypage">마이페이지</string>
    <string name="liked_review">내가 좋아요 한 리뷰</string>
    <string name="write_review">내가 쓴 리뷰</string>
    <string name="complete">완료</string>
    <string name="logout">로그아웃</string>
    <string name="kakao_app_key">3ecb6ddddf6522c5f01f1fc953c55bad</string>
    <string name="kakao_scheme">kakao3ecb6ddddf6522c5f01f1fc953c55bad</string>
    <string name="kakaolink_host">kakaolink</string>
</resources>