<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:background="@color/white"
    tools:context=".src.auth.signup.SendMailFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="14dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/tv_send_mail1"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:fontFamily="@font/pretendard_semibold"
        android:gravity="center_vertical"
        android:lineSpacingExtra="6dp"
        android:padding="8dp"
        android:text="@string/sendMail1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_line" />

    <TextView
        android:id="@+id/tv_send_mail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_regular"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        android:text="@string/sendMail2"
        android:textColor="@color/dark"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_send_mail1"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/btn_solid"
        android:backgroundTint="@color/lavender"
        android:text="@string/next"
        android:textAppearance="@style/btnText"
        app:layout_constraintTop_toBottomOf="@+id/tv_send_mail2" />

</androidx.constraintlayout.widget.ConstraintLayout>