<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:background="@color/white"
    tools:context=".src.auth.join.CreateAccountFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_lavender"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_semibold"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:paddingVertical="3dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        style="@style/textInputLayout"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_pw"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        tools:helperText="유효하지 않은 이메일입니다."
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/textInputEditText"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_semibold"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:paddingVertical="3dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pw"
        style="@style/textInputLayout"
        app:layout_constraintBottom_toTopOf="@+id/tv_constraint_pw"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw"
        tools:helperText="비밀번호는 최소 8자 이상이어야 합니다."
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pw"
            style="@style/textInputEditText"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_constraint_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:text="@string/constraint_pw"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintTop_toBottomOf="@+id/layout_pw"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/selector_btn_round"
        android:backgroundTint="@color/btnDisabled"
        android:text="@string/next"
        android:textAppearance="@style/btnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_constraint_pw"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>