<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:background="@color/white"
    tools:context=".src.auth.signup.CreateAccountFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="14dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_lavender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_line" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/pretendard_semibold"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        style="@style/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        tools:helperText="회원가입되지 않은 이메일입니다."
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/textInputEditText"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_semibold"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pw"
        style="@style/textInputLayout"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw"
        tools:helperText="비밀번호를 확인해주세요."
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pw"
            style="@style/textInputEditText"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/selector_btn_round"
        android:backgroundTint="@color/btnEnabled"
        android:text="@string/login"
        android:textAppearance="@style/btnText"
        app:layout_constraintTop_toBottomOf="@+id/layout_pw"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>